Move main file to the root folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="//cdn.jsdelivr.net/webcomponentsjs/0.7.10/webcomponents.min.js"></script>
 
     <!-- Importing Custom Elements -->
-    <link rel="import" href="src/juicy-ace-editor.html">
+    <link rel="import" href="juicy-ace-editor.html">
 	<style type="text/css" media="screen">
 		html,body{
 			height: 100%;
