--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -3,7 +3,7 @@
     http://juicy.github.io/juicy-ace-editor/
     version: 1.0.3
 -->
-<script src="../../ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+<script src="../ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 
 <template>
     <style>
@@ -27,7 +27,7 @@
     // Refers to the "importer", which is index.html
     var thatDoc = document;
 
-    // Refers to the "importee", which is src/juicy-ace-editor.html
+    // Refers to the "importee", which is juicy-ace-editor.html
     var thisDoc = (document._currentScript || document.currentScript).ownerDocument;
 
     // Gets content from <template>
