--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="http://ace.c9.io/demo/kitchen-sink/styles.css" type="text/css" media="screen" charset="utf-8">
     <script async="true" src="https://use.edgefonts.net/source-code-pro.js"></script>
 
-    <link rel="import" href="src/juicy-ace-editor.html">
+    <link rel="import" href="juicy-ace-editor.html">
 </head>
 <body>
 <template is="dom-bind">
