Trigger editor-ready event - fixes #5

--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -71,6 +71,7 @@
             // container.appendChild(text);
             container.innerHTML = this.innerHTML || this.value;
             editor = ace.edit(container);
+            this.dispatchEvent(new CustomEvent("editor-ready", {detail: editor}));
             this.editor = editor;
 
             // inject base editor styles
