--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -2,6 +2,7 @@
     Custom Element with Ace code editor
     http://juicy.github.io/juicy-ace-editor/
     version: 1.1.1
+    @demo index.html
 -->
 <script src="../ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 
