Adapt to work with inlining tools

--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -6,7 +6,7 @@
 -->
 <script src="../ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 
-<template>
+<template id="juicy-ace-editor">
     <style>
         :host{
             display: block;
@@ -32,7 +32,7 @@
     var thisDoc = (document._currentScript || document.currentScript).ownerDocument;
 
     // Gets content from <template>
-    var template = thisDoc.querySelector('template').content;
+    var template = thisDoc.querySelector('template#juicy-ace-editor').content;
 
     // Creates an object based in the HTML Element prototype
     var TomalecAceEditorPrototype = Object.create(HTMLElement.prototype);
