Fix Shadow DOM styles shimming, remove position: absolute
use flexbox instead

fixes Juicy/juicy-ace-editor/issues/17

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    juicy-ace-editor {
 	    	margin: 15px 15px;
 	        width: 45%;
-	        height: 13em;
+            min-height: 12em;
 	    }
 	    .markdown-body{
 	    	margin: 1em auto;
