--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -3,6 +3,8 @@
     http://juicy.github.io/juicy-ace-editor/
     version: 1.1.2
     @demo index.html
+    @license MIT
+    @author
 -->
 <script src="../ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <script src="../ace-builds/src-min-noconflict/ext-searchbox.js" type="text/javascript" charset="utf-8"></script>
@@ -10,19 +12,15 @@
 <template id="juicy-ace-editor">
     <style>
         :host{
-            display: block;
-            position: relative;
+            display: flex;
+            min-height: 1em;
+            flex-direction: column;
         }
         #juicy-ace-editor-container{
-            width: 100%;
-            height: 100%;
-            display: block;
-
-            position: absolute;
+            flex: 1;
         }
     </style>
     <div id="juicy-ace-editor-container"></div>
-    <content></content>
 </template>
 <script>
 (function(window, document, undefined) {
@@ -34,6 +32,11 @@
 
     // Gets content from <template>
     var template = thisDoc.querySelector('template#juicy-ace-editor').content;
+
+    // Shim Shadow DOM styles if needed
+    if (window.ShadowDOMPolyfill) {
+        WebComponents.ShadowCSS.shimStyling(template, 'juicy-ace-editor');
+    }
 
     // Creates an object based in the HTML Element prototype
     var TomalecAceEditorPrototype = Object.create(HTMLElement.prototype);
