--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!-- Importing Web Component's Polyfill -->
     <script src="//cdn.jsdelivr.net/webcomponentsjs/0.7.10/webcomponents.min.js"></script>
+    <!-- Custom Elements v0->v1 Polyfil -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/document-register-element/1.3.0/document-register-element.js"></script>
 
     <!-- Importing Custom Elements -->
     <link rel="import" href="juicy-ace-editor.html">
