--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -6,6 +6,8 @@
     <title>&lt;juicy-ace-editor&gt; Kitchen Sink</title>
 
     <script src="//cdn.jsdelivr.net/webcomponentsjs/0.7.10/webcomponents.min.js"></script>
+    <!-- Custom Elements v0->v1 Polyfil -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/document-register-element/1.3.0/document-register-element.js"></script>
     <link rel="import" href="../polymer/polymer.html">
 
     <link rel="stylesheet" href="http://ace.c9.io/demo/kitchen-sink/styles.css" type="text/css" media="screen" charset="utf-8">
