Do not use SDv1 if implementation is incomplete
(Safari conflicts with WCjs polyfill)

Juicy/juicy-ace-editor/issues/23

--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -57,7 +57,7 @@
 
         // Creates the shadow root
         var shadowRoot
-        if(this.attachShadow){
+        if(this.attachShadow && this.getRootNode){
             shadowRoot = this.attachShadow({mode:'open'});
         } else {
             shadowRoot = this.createShadowRoot();
