Fix global editor var

--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -73,6 +73,7 @@
         var text = this.childNodes[0];
         var container = this.container;
         var element = this;
+        var editor;
 
         if(this.editor){
             editor = this.editor;
