Workaround v1 polyfill conflict WebReflection/document-register-element#99
Juicy/juicy-ace-editor#22
Starcounter/RebelsLounge#74

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <!-- Importing Web Component's Polyfill -->
     <script src="//cdn.jsdelivr.net/webcomponentsjs/0.7.10/webcomponents.min.js"></script>
+    <!-- Custom Elements v0->v1 Polyfil -->
+    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/document-register-element/1.3.0/document-register-element.js"></script> -->
+    <!-- <script src="bower_components/document-register-element/build/document-register-element.max.js"></script> -->
 
     <!-- Importing Custom Elements -->
     <link rel="import" href="juicy-ace-editor.html">
