--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -40,24 +40,25 @@
 
     // Creates an object based in the HTML Element prototype
     class TomalecAceEditor extends HTMLElement {
-    // Fires when an instance of the element is created
+        // getter/setter for value property
+        get value(){
+            return self.editor && self.editor.getValue() || "";
+        }
+        set value(val){
+            self.editor && self.editor.setValue( val );
+        }
+        // list of observable attributes
+        static get observedAttributes() {
+            return ['theme', 'mode', 'fontsize', 'softtabs', 'tabsize', 'readonly', 'wrapmode'];
+        }
+
+        // Fires when an instance of the element is created
         constructor(self){
             // Polyfill ceveat we need to fetch the right context;
             // https://github.com/WebReflection/document-register-element/tree/master#v1-caveat
             self = super(self);
-            var value = "";
-            Object.defineProperty(this, "value", {
-                set: function(val){
-                        self.editor && self.editor.setValue( val );
-                    value = val;
-                },
-                get: function(){
-                        value = self.editor && self.editor.getValue() || value;
-                    return value;
-                }
-            });
             // Creates the shadow root
-            var shadowRoot
+            var shadowRoot;
             if(self.attachShadow && self.getRootNode){
                 shadowRoot = self.attachShadow({mode:'open'});
             } else {
@@ -69,114 +70,104 @@
             shadowRoot.appendChild(clone);
             return self;
         }
-    };
-    var TomalecAceEditorPrototype = TomalecAceEditor.prototype;
-    // Fires when an instance was inserted into the document
-    TomalecAceEditorPrototype.connectedCallback = function() {
-        var text = this.childNodes[0];
-        var container = this.container;
-        var element = this;
-        var editor;
+        connectedCallback() {
+            var text = this.childNodes[0];
+            var container = this.container;
+            var element = this;
+            var editor;
 
-        if(this.editor){
-            editor = this.editor;
-            this.value = text.textContent || this.value;
-        } else {
+            if(this.editor){
+                editor = this.editor;
+                this.value = text.textContent || this.value;
+            } else {
+                // container.appendChild(text);
+                container.innerHTML = this.innerHTML || this.value;
+                editor = ace.edit(container);
+                this.dispatchEvent(new CustomEvent("editor-ready", {detail: editor}));
+                this.editor = editor;
+
+                // inject base editor styles
+                this.injectTheme('#ace_editor\\.css');
+                this.injectTheme('#ace-tm');
+                this.injectTheme('#ace_searchbox');
+
+                editor.getSession().on('change', function(event){
+                    element.dispatchEvent(new CustomEvent("change", {detail: event}));
+                });
+            }
+
+            // handle theme changes
+            editor.renderer.addEventListener("themeLoaded", this.onThemeLoaded.bind(this));
+
+            // initial attributes
+                editor.setTheme( this.getAttribute("theme") );
+                editor.setFontSize( parseInt(this.getAttribute("fontsize")) || 12 );
+                editor.setReadOnly( this.hasAttribute("readonly") );
+                var session = editor.getSession();
+                session.setMode( this.getAttribute("mode") );
+                session.setUseSoftTabs( this.getAttribute("softtabs") );
+                this.getAttribute("tabsize") && session.setTabSize( this.getAttribute("tabsize") );
+                session.setUseWrapMode( this.hasAttribute("wrapmode") );
+
+
+            // Observe input textNode changes
+            // Could be buggy as editor was also added to Light DOM;
+                var observer = new MutationObserver(function(mutations) {
+                  mutations.forEach(function(mutation) {
+                    // console.log("observation", mutation.type, arguments, mutations, editor, text);
+                    if(mutation.type == "characterData"){
+                        element.value = text.data;
+                    }
+                  });
+                });
+                text && observer.observe(text, { characterData: true });
             // container.appendChild(text);
-            container.innerHTML = this.innerHTML || this.value;
-            editor = ace.edit(container);
-            this.dispatchEvent(new CustomEvent("editor-ready", {detail: editor}));
-            this.editor = editor;
-
-            // inject base editor styles
-            this.injectTheme('#ace_editor\\.css');
-            this.injectTheme('#ace-tm');
-            this.injectTheme('#ace_searchbox');
-
-            editor.getSession().on('change', function(event){
-                element.dispatchEvent(new CustomEvent("change", {detail: event}));
-            });
+            this._attached = true;
         }
-
-        // handle theme changes
-        editor.renderer.addEventListener("themeLoaded", this.onThemeLoaded.bind(this));
-
-        // initial attributes
-            editor.setTheme( this.getAttribute("theme") );
-            editor.setFontSize( parseInt(this.getAttribute("fontsize")) || 12 );
-            editor.setReadOnly( this.hasAttribute("readonly") );
-            var session = editor.getSession();
-            session.setMode( this.getAttribute("mode") );
-            session.setUseSoftTabs( this.getAttribute("softtabs") );
-            this.getAttribute("tabsize") && session.setTabSize( this.getAttribute("tabsize") );
-            session.setUseWrapMode( this.hasAttribute("wrapmode") );
-
-
-        // Observe input textNode changes
-        // Could be buggy as editor was also added to Light DOM;
-            var observer = new MutationObserver(function(mutations) {
-              mutations.forEach(function(mutation) {
-                // console.log("observation", mutation.type, arguments, mutations, editor, text);
-                if(mutation.type == "characterData"){
-                    element.value = text.data;
-                }
-              });
-            });
-            text && observer.observe(text, { characterData: true });
-        // container.appendChild(text);
-        this._attached = true;
-    };
-
-    // Fires when an instance was removed from the document
-    TomalecAceEditorPrototype.disconnectedCallback = function() {
-        this._attached = false;
-    };
-
-    // Fires when an attribute was added, removed, or updated
-    TomalecAceEditorPrototype.attributeChangedCallback = function(attr, oldVal, newVal) {
-        if(!this._attached){
-            return false;
+        disconnectedCallback() {
+            this._attached = false;
         }
-        switch(attr){
-            case "theme":
-                this.editor.setTheme( newVal );
-                break;
-            case "mode":
-                this.editor.getSession().setMode( newVal );
-                break;
-            case "fontsize":
-                this.editor.setFontSize( newVal );
-                break;
-            case "softtabs":
-                this.editor.getSession().setUseSoftTabs( newVal );
-                break;
-            case "tabsize":
-                this.editor.getSession().setTabSize( newVal );
-                break;
-            case "readonly":
-                this.editor.setReadOnly( newVal === '' || newVal );
-                break;
-            case "wrapmode":
-                this.editor.getSession().setUseWrapMode( newVal !== null );
-                break;
+        attributeChangedCallback(attr, oldVal, newVal) {
+            if(!this._attached){
+                return false;
+            }
+            switch(attr){
+                case "theme":
+                    this.editor.setTheme( newVal );
+                    break;
+                case "mode":
+                    this.editor.getSession().setMode( newVal );
+                    break;
+                case "fontsize":
+                    this.editor.setFontSize( newVal );
+                    break;
+                case "softtabs":
+                    this.editor.getSession().setUseSoftTabs( newVal );
+                    break;
+                case "tabsize":
+                    this.editor.getSession().setTabSize( newVal );
+                    break;
+                case "readonly":
+                    this.editor.setReadOnly( newVal === '' || newVal );
+                    break;
+                case "wrapmode":
+                    this.editor.getSession().setUseWrapMode( newVal !== null );
+                    break;
 
+            }
         }
-    };
-
-
-    TomalecAceEditorPrototype.onThemeLoaded = function(e){
-        var themeId = "#" + e.theme.cssClass;
-        this.injectTheme(themeId);
-        // Workaround Chrome stable bug, force repaint
-        this.container.style.display='none';
-        this.container.offsetHeight;
-        this.container.style.display='';
-    };
-
-    // inject the style tag of a theme to the element
-    TomalecAceEditorPrototype.injectTheme = function(themeId){
-        var n = document.querySelector(themeId);
-        this.shadowRoot.appendChild(cloneStyle(n));
+        onThemeLoaded(e){
+            var themeId = "#" + e.theme.cssClass;
+            this.injectTheme(themeId);
+            // Workaround Chrome stable bug, force repaint
+            this.container.style.display='none';
+            this.container.offsetHeight;
+            this.container.style.display='';
+        }
+        injectTheme(themeId){
+            var n = document.querySelector(themeId);
+            this.shadowRoot.appendChild(cloneStyle(n));
+        }
     };
 
     //helper function to clone a style
