Fix sizing of ace container.
Use WC v0 + Shadow DOM in demo page

--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -18,6 +18,7 @@
         }
         #juicy-ace-editor-container{
             flex: 1;
+            height: 100%;
         }
     </style>
     <div id="juicy-ace-editor-container"></div>
