--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="http://juicy.github.io/juicy-tile-list/examples/github-markdown.css">
 
     <!-- Importing Web Component's Polyfill -->
+    <!-- v0 with Shadow DOM-->
+    <script src="../webcomponentsjs/webcomponents.js"></script>
+    <!-- or v1 -->
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
-    <!-- Custom Elements v0->v1 Polyfil -->
+    <!-- Custom Elements v0&v1 Polyfil -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/document-register-element/1.3.0/document-register-element.js"></script>
 
     <!-- Importing Custom Elements -->
