Add travis setup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- or v1 -->
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
     <!-- Custom Elements v0&v1 Polyfil -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/document-register-element/1.3.0/document-register-element.js"></script>
+    <script src="../document-register-element/build/document-register-element.js"></script>
 
     <!-- Importing Custom Elements -->
     <link rel="import" href="juicy-ace-editor.html">
