Fix constructor in Edge
https://github.com/Juicy/juicy-ace-editor/issues/31
https://github.com/Starcounter/starcounter-layout-html-editor/pull/16#issuecomment-323390136

--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -71,7 +71,8 @@
             }
             // Adds a template clone into shadow root
             var clone = thatDoc.importNode(template, true);
-            self.container = clone.getElementById("juicy-ace-editor-container");
+            // getElementById may not be polyfilled yet
+            self.container = clone.querySelector('#juicy-ace-editor-container');
             shadowRoot.appendChild(clone);
             return self;
         }
