Add `shadow-style` - new attribute to declaratively inject styles to shadow DOM,
add test case for custom Ace themes

fixes https://github.com/Juicy/juicy-ace-editor/issues/28

--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,9 @@
     <script>
         // Load and run all tests (.html, .js):
         WCT.loadSuites([
-          'spec.html'
+          'spec.html',
+          'custom-theme.html',
+          'shadow-style.html'
         ]);
     </script>
 </body>
