Search for style to inject in the same (shadow) tree
https://github.com/Juicy/juicy-ace-editor/issues/28#issuecomment-349130972

--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -177,8 +177,12 @@
             this.container.offsetHeight;
             this.container.style.display='';
         }
-        injectTheme(themeId){
-            var n = document.querySelector(themeId);
+        /**
+         * Injects a style element into juicy-ace-editor's shadow root
+         * @param {CSSSelector} selector for an element in the same shadow tree or document as `juicy-ace-editor`
+         */
+        injectTheme(selector){
+            var n = this.getRootNode().querySelector(selector);
             this.shadowRoot.appendChild(cloneStyle(n));
         }
     };
