remove the html file, change tests to load with es modules

--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
     <script src="../../web-component-tester/browser.js"></script>
 
     <!-- if we use WCT suites, it is loaded per suite -->
-    <link rel="import" href="../juicy-ace-editor.html">
+    <script type="module" src="../juicy-ace-editor.js"></script>
 
     <title>juicy-ace-editor test suite</title>
 </head>
