--- a/test/spec.html
+++ b/test/spec.html
@@ -12,7 +12,7 @@
     <script src="../../document-register-element/build/document-register-element.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
 
-    <link rel="import" href="../juicy-ace-editor.html">
+    <script type="module" src="../juicy-ace-editor.js"></script>
 </head>
 
 <body>
