--- a/test/spec.html
+++ b/test/spec.html
@@ -12,7 +12,10 @@
     <script src="../../document-register-element/build/document-register-element.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
 
-    <script type="module" src="../juicy-ace-editor.js"></script>
+    <link rel="import" href="juicy-ace-editor.html">
+
+    <!--TODO once the HTML import is no longer needed, import as a module directly-->
+    <!-- <script type="module" src="../juicy-ace-editor.js"></script> -->
 </head>
 
 <body>
