--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,8 @@
         WCT.loadSuites([
           'spec.html',
           'custom-theme.html',
-          'shadow-style.html'
+          'shadow-style.html',
+          'autosize.html'
         ]);
     </script>
 </body>
