--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,8 @@
         // Load and run all tests (.html, .js):
         WCT.loadSuites([
           'spec.html',
+          'value.html',
+          'change-event.html',
           'custom-theme.html',
           'shadow-style.html',
           'autosize.html'
