Privitize ignoreChange prop

--- a/juicy-ace-editor.html
+++ b/juicy-ace-editor.html
@@ -47,9 +47,9 @@
         }
         set value(val){
             if(this.editor){
-                this.ignoreChange = true;
+                this._ignoreChange = true;
                 this.editor.setValue( val );
-                this.ignoreChange = false;
+                this._ignoreChange = false;
             } else {
                 this.textContent = val;
             }
@@ -64,7 +64,7 @@
             // Polyfill ceveat we need to fetch the right context;
             // https://github.com/WebReflection/document-register-element/tree/master#v1-caveat
             self = super(self);
-            this.ignoreChange = false;
+            this._ignoreChange = false;
             // Creates the shadow root
             var shadowRoot;
             if(self.attachShadow && self.getRootNode){
@@ -105,7 +105,7 @@
                 this.injectTheme('#ace_searchbox');
 
                 editor.getSession().on('change', (event) => {
-                    if (!this.ignoreChange) {
+                    if (!this._ignoreChange) {
                         element.dispatchEvent(new CustomEvent("change", {bubbles: true, composed: true, detail: event}));
                     }
                 });
